[gd_scene load_steps=25 format=3 uid="uid://baqbjml8ahgng"]

[ext_resource type="Script" uid="uid://cfmtk5lhwecto" path="res://addons/agent/ui/main_panel.gd" id="1_c4fjy"]
[ext_resource type="Theme" uid="uid://dwqhs78076qut" path="res://addons/agent/ui/resource/AgentTheme.tres" id="1_i5act"]
[ext_resource type="Texture2D" uid="uid://dd5t0pwniqnr1" path="res://addons/agent/icons/history.svg" id="2_6rfr6"]
[ext_resource type="Texture2D" uid="uid://d3tqc8rlqan2t" path="res://addons/agent/icons/back.svg" id="2_aabuu"]
[ext_resource type="PackedScene" uid="uid://dob5hdboaqcnu" path="res://addons/agent/ui/history/history_and_title.tscn" id="2_i5act"]
[ext_resource type="PackedScene" uid="uid://cq2jo5hlpns6j" path="res://addons/agent/tools/tools.tscn" id="3_2usmi"]
[ext_resource type="Texture2D" uid="uid://knvpu0jr7hwd" path="res://addons/agent/icons/newicon/Icon_add.svg" id="3_wlmmt"]
[ext_resource type="PackedScene" uid="uid://dqkrjn0mak6lh" path="res://addons/agent/ui/chat/input_container.tscn" id="4_2dutf"]
[ext_resource type="Texture2D" uid="uid://bj7vdrhq42fmp" path="res://addons/agent/icons/newicon/icon_setting1.svg" id="6_cq37x"]
[ext_resource type="Texture2D" uid="uid://7cvkbex7yjot" path="res://addons/agent/icons/newicon/Icon_help.svg" id="6_wlmmt"]
[ext_resource type="Texture2D" uid="uid://bfeehv7cn64ie" path="res://addons/agent/icons/newicon/icon_monochrome_light.svg" id="7_aabuu"]
[ext_resource type="PackedScene" uid="uid://fycl6xlfw8r5" path="res://addons/agent/ui/plan/plan_list.tscn" id="8_1ot7o"]
[ext_resource type="PackedScene" uid="uid://bxe6hto0vk8fu" path="res://addons/agent/ui/setting/setting.tscn" id="8_5t7oo"]
[ext_resource type="ButtonGroup" uid="uid://4cfowu05scrd" path="res://addons/agent/ui/resource/setting_tab_group.tres" id="8_i5act"]
[ext_resource type="PackedScene" uid="uid://b66g7g3ydkkeb" path="res://addons/agent/ui/memory/memory_container.tscn" id="10_n876e"]

[sub_resource type="Theme" id="Theme_aabuu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aabuu"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.078431375, 0.078431375, 0.078431375, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aabuu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n876e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cd0et"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5act"]
bg_color = Color(0.17254902, 0.17254902, 0.17254902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pcyt6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n876e"]
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5v6i3"]
bg_color = Color(0.14406255, 0.14406255, 0.14406249, 1)
border_color = Color(0.13333334, 0.13333334, 0.13333334, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 16

[node name="Alpha" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i5act")
script = ExtResource("1_c4fjy")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="BackgroundPanelContainer" type="PanelContainer" parent="ScrollContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_aabuu")
theme_override_styles/panel = SubResource("StyleBoxFlat_aabuu")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="TopBarConrainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TopBar" type="HBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HistoryAndTitle" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar" instance=ExtResource("2_i5act")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackChatButton" type="Button" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "回到对话"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_aabuu")
text = "      "
icon = ExtResource("2_aabuu")
flat = true
alignment = 0
icon_alignment = 1
expand_icon = true

[node name="Control2" type="HBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="TopBarButtons" type="HBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar/Control2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="HistoryButton" type="Button" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar/Control2/TopBarButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "查看历史记录"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_aabuu")
text = "      "
icon = ExtResource("2_6rfr6")
flat = true
icon_alignment = 1
expand_icon = true

[node name="NewChatButton" type="Button" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar/Control2/TopBarButtons"]
unique_name_in_owner = true
self_modulate = Color(0.76862746, 0.76862746, 0.76862746, 1)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "创建新对话"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_n876e")
text = "      "
icon = ExtResource("3_wlmmt")
flat = true
icon_alignment = 1

[node name="HelpButton" type="Button" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar/Control2/TopBarButtons"]
unique_name_in_owner = true
self_modulate = Color(0.76862746, 0.76862746, 0.76862746, 1)
layout_mode = 2
tooltip_text = "打开帮助"
mouse_default_cursor_shape = 2
icon = ExtResource("6_wlmmt")
flat = true
icon_alignment = 1

[node name="SettingButton" type="Button" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar/Control2/TopBarButtons"]
unique_name_in_owner = true
self_modulate = Color(0.76862746, 0.76862746, 0.76862746, 1)
layout_mode = 2
tooltip_text = "设置"
mouse_default_cursor_shape = 2
icon = ExtResource("6_cq37x")
flat = true

[node name="SettingTabs" type="HBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar/Control2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SettingTabMemory" type="Button" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar/Control2/SettingTabs"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "切换到记忆设置"
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_cd0et")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i5act")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cd0et")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_i5act")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pcyt6")
toggle_mode = true
button_pressed = true
button_group = ExtResource("8_i5act")
text = " 记忆 "

[node name="SettingTabSetting" type="Button" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/TopBarConrainer/TopBar/Control2/SettingTabs"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "切换到设置"
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_cd0et")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i5act")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cd0et")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_i5act")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pcyt6")
toggle_mode = true
button_group = ExtResource("8_i5act")
text = " 设置 "

[node name="Containers" type="Control" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ChatContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="WelcomeMessage" type="Control" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer/WelcomeMessage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n876e")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer/WelcomeMessage/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="AlphaLogo" type="TextureRect" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer/WelcomeMessage/PanelContainer/VBoxContainer"]
self_modulate = Color(0.21568628, 0.34117648, 0.5137255, 1)
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
texture = ExtResource("7_aabuu")
expand_mode = 1
stretch_mode = 5

[node name="Description" type="Label" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer/WelcomeMessage/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "帮助构建游戏项目
帮助学习Godot插件
帮助梳理已有功能"
horizontal_alignment = 1

[node name="MessageContainer" type="ScrollContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="MessageList" type="VBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer/MessageContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PlanList" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer" instance=ExtResource("8_1ot7o")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5v6i3")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="InputContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers/ChatContainer/MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_2dutf")]
unique_name_in_owner = true
layout_mode = 2

[node name="SettingContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers" instance=ExtResource("8_5t7oo")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MemoryContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/Containers" instance=ExtResource("10_n876e")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="BottomMarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/BottomMarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/BottomMarginContainer/HBoxContainer"]
self_modulate = Color(0.46666667, 0.46666667, 0.46666667, 1)
layout_mode = 2
text = "By"

[node name="LinkButton" type="LinkButton" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/BottomMarginContainer/HBoxContainer"]
self_modulate = Color(0.23921569, 0.43137255, 0.67058825, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "打开作者页面"
text = "@moshanzhu"
underline = 1
uri = "https://www.moshangzhu.com.cn/"

[node name="LinkButton4" type="LinkButton" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/BottomMarginContainer/HBoxContainer"]
self_modulate = Color(0.23921569, 0.43137255, 0.67058825, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "打开Alpha爱赞助页面"
text = "爱赞助链接"
underline = 1
uri = "https://azz.ee/godotalphaagent"

[node name="Label2" type="Label" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/BottomMarginContainer/HBoxContainer"]
self_modulate = Color(0.46666667, 0.46666667, 0.46666667, 1)
layout_mode = 2
text = "更多内容，请前往"
horizontal_alignment = 1

[node name="LinkButton2" type="LinkButton" parent="ScrollContainer/MarginContainer/BackgroundPanelContainer/VBoxContainer/BottomMarginContainer/HBoxContainer"]
self_modulate = Color(0.23921569, 0.43137255, 0.67058825, 1)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "打开Godot新手村页面"
text = "Godot新手村"
underline = 1
uri = "https://godotvillage.github.io/"

[node name="Tools" parent="." instance=ExtResource("3_2usmi")]

[node name="ChatModels" type="Node" parent="."]
unique_name_in_owner = true
